[kube-prometheus-stack] Thanos Ruler: Add alertDropLabels + additionalConfig
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
+++ b/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
@@ -185,5 +185,15 @@ spec:
   volumeMounts:
 {{ toYaml .Values.thanosRuler.thanosRulerSpec.volumeMounts | indent 4 }}
 {{- end }}
+{{- if .Values.thanosRuler.thanosRulerSpec.alertDropLabels }}
+  alertDropLabels:
+{{ toYaml .Values.thanosRuler.thanosRulerSpec.alertDropLabels | indent 4 }}
+{{- end }}
   portName: {{ .Values.thanosRuler.thanosRulerSpec.portName }}
+{{- with .Values.thanosRuler.thanosRulerSpec.additionalConfig }}
+  {{- tpl (toYaml .) $ | nindent 2 }}
+{{- end }}
+{{- with .Values.thanosRuler.thanosRulerSpec.additionalConfigString }}
+  {{- tpl . $ | nindent 2 }}
+{{- end }}
 {{- end }}
