[kube-prometheus-stack] Thanos Ruler: Add tpl to labels and additionalArgs
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
+++ b/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
@@ -39,7 +39,7 @@ spec:
 {{- end }}
 {{- if .Values.thanosRuler.thanosRulerSpec.additionalArgs }}
   additionalArgs:
-{{ toYaml .Values.thanosRuler.thanosRulerSpec.additionalArgs | indent 4 }}
+{{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.additionalArgs) $ | indent 4 }}
 {{- end }}
 {{- if .Values.thanosRuler.thanosRulerSpec.nodeSelector }}
   nodeSelector:
@@ -123,7 +123,7 @@ spec:
 {{- end }}
 {{- if .Values.thanosRuler.thanosRulerSpec.labels }}
   labels:
-{{ toYaml .Values.thanosRuler.thanosRulerSpec.labels | indent 4 }}
+{{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.labels) $ | indent 4 }}
 {{- end }}
 {{- if .Values.thanosRuler.thanosRulerSpec.podMetadata }}
   podMetadata:
