--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -360,4 +360,5 @@ networkPolicy: {}
   #         app: myapp
 
 # Array of extra K8s objects to deploy (evaluated as a template)
-extraDeploy: []
+# The value can hold an array of strings as well as objects
+extraManifests: []
