[prometheus-pushgateway]: add support for basic authentication
Signed-off-by: gasmick <33287410+gasmick@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -107,6 +107,12 @@ resources: {}
   #   cpu: 100m
   #   memory: 30Mi
 
+# -- Sets web configuration
+# To enable basic authentication, provide basicAuthUsers as a map
+webConfiguration: {}
+  # basicAuthUsers:
+  #   username: password
+
 liveness:
   enabled: true
   probe:
