Add example for envFrom
Signed-off-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -128,6 +128,8 @@ extraArgs: []
 #  --history.limit=1000
 
 envFrom: []
+#  - secretRef:
+#      name: name-of-secret
 
 replicas: 1
 ## Monitors ConfigMap changes and POSTs to a URL
