[prometheus-snmp-exporter] Allow setting environment variables via envFrom (#4441)
* Allow setting environment variables

- Add optional envFrom sections to DaemonSet and Deployment

Signed-off-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>

* Add example for envFrom

Signed-off-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>

---------

Signed-off-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>
Co-authored-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -127,6 +127,10 @@ podAnnotations: {}
 extraArgs: []
 #  --history.limit=1000
 
+envFrom: []
+#  - secretRef:
+#      name: name-of-secret
+
 replicas: 1
 ## Monitors ConfigMap changes and POSTs to a URL
 ## Ref: https://github.com/jimmidyson/configmap-reload
