--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "prometheus-pushgateway.fullname" . }}
+  labels:
+    {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
   web-config.yaml: {{ include "prometheus-pushgateway.webConfiguration" . | b64enc}}
 {{- end }}
