[prometheus-systemd-exporter]: fix extraArgs indentation, document it in values.
Signed-off-by: Cédric de Saint Martin <cdesaintmartin@wiremind.io>

--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -50,6 +50,10 @@ env: {}
 ##  env:
 ##    VARIABLE: value
 
+# extraArgs allows to pass command line arguments, as described on https://github.com/prometheus-community/systemd_exporter?tab=readme-ov-file#configuration
+extraArgs: []
+# - --systemd.collector.enable-resolved
+
 prometheus:
   monitor:
     enabled: false
