--- a/charts/prometheus-systemd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-systemd-exporter/templates/daemonset.yaml
@@ -75,11 +75,11 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
-            - name: proc
-              mountPath: /host/proc
-              readOnly:  true
             - name: systemd
-              mountPath: /host/systemd
+              mountPath: /run/systemd
+              readOnly: true
+            - name: dbus
+              mountPath: /var/run/dbus
               readOnly: true
             {{- with .Values.extraVolumeMounts }}
               {{- toYaml . | nindent 12 }}
@@ -99,12 +99,12 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        - name: proc
-          hostPath:
-            path: /proc
         - name: systemd
           hostPath:
             path: /run/systemd
+        - name: dbus
+          hostPath:
+            path: /var/run/dbus
         {{- with .Values.extraVolumes }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
