feat(kube-prometheus-stack): add aws-node exporter
Signed-off-by: Michael Borens <michael.borens@contentsquare.com>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -48,6 +48,13 @@ kubeControllerManager:
     selector:
       matchLabels:
         component: kube-controller-manager
+awsNode:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        k8s-app: aws-node
 coreDns:
   service:
     enabled: false
