feat(kube-prometheus-stack): missing enabled for ci
Signed-off-by: Michael Borens <michael.borens@contentsquare.com>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -49,6 +49,7 @@ kubeControllerManager:
       matchLabels:
         component: kube-controller-manager
 awsNode:
+  enabled: true
   service:
     enabled: false
   serviceMonitor:
