Use helper template setting labels in clusterrole
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus/ci/10-namespaced-sd-values.yaml
+++ b/charts/prometheus/ci/10-namespaced-sd-values.yaml
@@ -2,8 +2,8 @@
 ## Test case: Prometheus with namespaced SD
 ## Prometheus runs service discovery (SD) in its own namespace only.
 ## A custom cluster role is set up and bound to SA through a role binding
-## in the given namespace. Note that Prometheus *must* be told that its SD
-## is namespaced by means of scrape_configs.kubernetes_sd_configs.namespaces.
+## in the given namespace. Prometheus *must* be told that its SD
+## is namespaced by means of 'scrape_configs.kubernetes_sd_configs.namespaces'.
 server:
   automountServiceAccountToken: true
   namespaces: []
@@ -75,8 +75,7 @@ extraManifests:
     kind: ClusterRole
     metadata:
       labels:
-        app.kubernetes.io/name: prometheus
-        app.kubernetes.io/instance: prometheus
+        {{- include "prometheus.server.labels" . | nindent 4 }}
       name: prometheus-cluster-role
     rules:
       - apiGroups:
