--- a/charts/prometheus-mysql-exporter/values.yaml
+++ b/charts/prometheus-mysql-exporter/values.yaml
@@ -50,13 +50,16 @@ serviceMonitor:
   multipleTarget:
     enabled: false
     targets: []
-      # target connection information with name (required), endpoint (required) and port (optionnal)
-      # if sharedSecret is not enabled the name must match an entry client.{{ name }} existing in the secret
+      # target connection information with name (required), endpoint (required), port (optional), user(optional), password(optional)
       # - endpoint: mysql1.dns.local
       #   name: mysql1
       #   port: 3307
+      #   user: user1
+      #   password: password1
       # - endpoint: mysql2.dns.local
       #   name: mysql2
+      #   user: user2
+      #   password: password2
     # Enable shared credentials for all targets
     sharedSecret:
       enabled: false
