[prometheus-ipmi-exporter] Optionally pull config from a Secret
Signed-off-by: Nick Jones <nick@dischord.org>

--- a/charts/prometheus-ipmi-exporter/templates/configmap.yaml
+++ b/charts/prometheus-ipmi-exporter/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.configMapFile -}}
+{{- if not .Values.configSecret.enabled -}}
 {{- $fullName := include "prometheus-ipmi-exporter.fullname" . -}}
 apiVersion: v1
 kind: ConfigMap
