--- a/charts/prometheus-ipmi-exporter/values.yaml
+++ b/charts/prometheus-ipmi-exporter/values.yaml
@@ -63,6 +63,11 @@ serviceMonitor:
 
   # Configuration file for ipmi_exporter
 
+configSecret:
+  enabled: false
+  name: ipmi-secret
+  key: config.yml
+
 # This is an example config for scraping remote hosts via IPMI.
 # Information required to access remote IPMI interfaces can be supplied in the
 # 'modules' section. A scrape can request the usage of a given config by
