[prometheus-snmp-exporter] Extend workload config
- Introduce optional revisionHistoryLimit for Deployment / DaemonSet

Signed-off-by: ngc4579 <distant.calls@gmail.com>

--- a/charts/prometheus-snmp-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-snmp-exporter/templates/daemonset.yaml
@@ -122,4 +122,7 @@ spec:
       {{- with .Values.extraVolumes }}
       {{ toYaml . | nindent 8 }}
       {{- end }}
+  {{- with .Values.revisionHistoryLimit }}
+  revisionHistoryLimit: {{ . }}
+  {{- end }}
 {{- end }}
