--- a/charts/prometheus-snmp-exporter/templates/deployment.yaml
+++ b/charts/prometheus-snmp-exporter/templates/deployment.yaml
@@ -129,4 +129,7 @@ spec:
       {{- with .Values.extraVolumes }}
       {{ toYaml . | nindent 8 }}
       {{- end }}
+  {{- with .Values.revisionHistoryLimit }}
+  revisionHistoryLimit: {{ . }}
+  {{- end }}
 {{- end }}
