--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -132,6 +132,10 @@ envFrom: []
 #      name: name-of-secret
 
 replicas: 1
+
+# Uncomment to set a specific revisionHistoryLimit. Defaults to 10 as per Kubernetes API if not set.
+# revisionHistoryLimit: 3
+
 ## Monitors ConfigMap changes and POSTs to a URL
 ## Ref: https://github.com/jimmidyson/configmap-reload
 ##
