[prometheus-snmp-exporter] Extend metric relabels
- In addition to fixed '$key: $value' metric relabelings, allow
  arbitrary relabel configs in order to support e.g. common
  label prefixes

Signed-off-by: ngc4579 <distant.calls@gmail.com>

--- a/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
@@ -39,6 +39,9 @@ spec:
         replacement: {{ $replacement }}
         action: replace
         {{- end }}
+      {{- if (or .additionalMetricsRelabelConfigs $.Values.serviceMonitor.additionalMetricsRelabelConfigs) }}
+      {{- toYaml (default $.Values.serviceMonitor.additionalMetricsRelabelConfigs .additionalMetricsRelabelConfigs) | nindent 6 }}
+      {{- end }}
     {{- if (or .relabelings $.Values.serviceMonitor.relabelings) }}
     relabelings:
       {{- toYaml (default $.Values.serviceMonitor.relabelings .relabelings) | nindent 6 }}
