--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -185,7 +185,19 @@ serviceMonitor:
 
   # Metric relabeling is applied to samples as the last step before ingestion.
   # Set if defined unless overriden by params.additionalMetricsRelabels.
+  # This sets fixed relabel configs with action 'replace'.
   additionalMetricsRelabels: {}
+
+  # Metric relabeling is applied to samples as the last step before ingestion.
+  # Set if defined unless overridden by params.additionalMetricsRelabelConfigs.
+  # This allows setting arbitrary relabel configs.
+  # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#monitoring.coreos.com/v1.RelabelConfig
+  additionalMetricsRelabelConfigs: []
+    # - sourceLabels: [__name__]
+    #   targetLabel: __name__
+    #   action: replace
+    #   regex: (.*)
+    #   replacement: prefix_$1
 
   # Label for selecting service monitors as set in Prometheus CRD.
   # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#monitoring.coreos.com/v1.PrometheusSpec
@@ -215,6 +227,8 @@ serviceMonitor:
     #   relabelings: []
     # Map of metric labels and values to add. Overrides value set in serviceMonitor.additionalMetricsRelabels
     #   additionalMetricsRelabels: {}
+    # Metrics relabelings. Overrides value set in serviceMonitor.additionalMetricsRelabelConfigs
+    #   additionalMetricsRelabelConfigs: []
 
 # Extra manifests to deploy as an array
 extraManifests: []
