--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -226,6 +226,7 @@ serviceMonitor:
     # Relabelings. Overrides value set in serviceMonitor.relabelings
     #   relabelings: []
     # Map of metric labels and values to add. Overrides value set in serviceMonitor.additionalMetricsRelabels
+    # This sets fixed relabel configs with action 'replace'.
     #   additionalMetricsRelabels: {}
     # Metrics relabelings. Overrides value set in serviceMonitor.additionalMetricsRelabelConfigs
     #   additionalMetricsRelabelConfigs: []
