--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -187,6 +187,8 @@ serviceMonitor:
   # Set if defined unless overriden by params.additionalMetricsRelabels.
   # This sets fixed relabel configs with action 'replace'.
   additionalMetricsRelabels: {}
+    # targetLabel1: replacementValue1
+    # targetLabel2: replacementValue2
 
   # Metric relabeling is applied to samples as the last step before ingestion.
   # Set if defined unless overridden by params.additionalMetricsRelabelConfigs.
