fix/prometheus-mysql-exporter:rm-default-metric-endpoint-on-multi-target
Signed-off-by: Mohammad Baghertabar <ghms28@yahoo.com>

--- a/charts/prometheus-mysql-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-mysql-exporter/templates/servicemonitor.yaml
@@ -73,6 +73,7 @@ spec:
         {{- end }}
   {{- end }}
   {{- end }}
+  {{- if not .Values.serviceMonitor.multipleTarget.enabled }}
     - path: /metrics
       port: {{ .Values.service.name }}
   {{- if .Values.serviceMonitor.interval }}
@@ -86,5 +87,6 @@ spec:
   {{- end }}
   {{- if .Values.serviceMonitor.relabelings }}
       relabelings: {{ toYaml .Values.serviceMonitor.relabelings | nindent 8 }}
+  {{- end }}
   {{- end }}
 {{- end }}
