--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -3,6 +3,7 @@
 ## to set the same values for each chart (and image) separately
 global:
   imagePullSecrets: []
+  imageRegistry: ""
 
 ## number of exporter instances
 ##
@@ -13,6 +14,7 @@ replicaCount: 1
 restartPolicy: Always
 
 image:
+  registry: ""
   repository: quay.io/prometheuscommunity/elasticsearch-exporter
   # if not set appVersion field from Chart.yaml is used
   tag: ""
