--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -98,7 +98,7 @@ service:
     enabled: false
     ipFamilies: ["IPv6", "IPv4"]
     ipFamilyPolicy: "PreferDualStack"
-  externalTrafficPolicy: Cluster
+  externalTrafficPolicy: ""
 
 # Set a NetworkPolicy with:
 # ingress only on service.port
