--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/validatingWebhookConfiguration.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/validatingWebhookConfiguration.yaml
@@ -74,4 +74,10 @@ webhooks:
         {{- end }}
       {{- end }}
     {{- end }}
+    {{- if .Values.prometheusOperator.admissionWebhooks.objectSelector }}
+    objectSelector:
+      {{- with .Values.prometheusOperator.admissionWebhooks.objectSelector }}
+      {{- toYaml . | nindent 6}}
+      {{- end }}
+    {{- end }}
 {{- end }}
