alertmanager: add baseURL value
While using `extraArgs` is possible, `baseURL` is consistent with the
Prometheus chart and is more discoverable.
The template modification is taken from the prometheus chart.

Signed-off-by: Max Gautier <mg@max.gautier.name>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -171,6 +171,9 @@ spec:
             {{- range $key, $value := .Values.extraArgs }}
             - --{{ $key }}={{ $value }}
             {{- end }}
+            {{- if .Values.baseURL }}
+            - --web.external-url={{ .Values.baseURL }}
+            {{- end }}
           ports:
             - name: http
               containerPort: 9093
