--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -15,6 +15,9 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+# Full external URL where alertmanager is reachable, used for backlinks.
+baseURL: ""
+
 extraArgs: {}
 
 ## Additional Alertmanager Secret mounts
