--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2482,7 +2482,7 @@ prometheusOperator:
           drop:
           - ALL
 
-      # Security context for patch job container
+    # Security context for patch job container
     patchWebhookJob:
       securityContext:
         allowPrivilegeEscalation: false
@@ -2502,6 +2502,15 @@ prometheusOperator:
       # issuerRef:
       #   name: "issuer"
       #   kind: "ClusterIssuer"
+
+  conversionWebhookService:
+    annotations: {}
+    labels: {}
+    clusterIP: ""
+    ipDualStack:
+      enabled: false
+      ipFamilies: ["IPv6", "IPv4"]
+      ipFamilyPolicy: "PreferDualStack"
 
   ## Namespaces to scope the interaction of the Prometheus Operator and the apiserver (allow list).
   ## This is mutually exclusive with denyNamespaces. Setting this to an empty object will disable the configuration
