--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -68,6 +68,7 @@ configmapReload:
     # containerPort: 9533
 
     ## Additional configmap-reload container arguments
+    ## Set to null for argumentless flags
     ##
     extraArgs: {}
 
@@ -271,8 +272,10 @@ server:
     #   value: "Bearer ABCDEabcde12345"
 
   ## Additional Prometheus server container arguments
+  ## Set to null for argumentless flags
   ##
   extraArgs: {}
+    # web.enable-remote-write-receiver: null
 
   ## Additional InitContainers to initialize the pod
   ##
