[kube-prometheus-stack] fix the retentionSize value
Signed-off-by: karloramone <karlo.krupljan@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -125,7 +125,9 @@ spec:
 {{ toYaml .Values.prometheus.prometheusSpec.resources | indent 4 }}
 {{- end }}
 {{- if not .Values.prometheus.agentMode }}
+{{- if not .Values.prometheus.prometheusSpec.retentionSize }}
   retention: {{ .Values.prometheus.prometheusSpec.retention | quote  }}
+{{- end }}
 {{- if .Values.prometheus.prometheusSpec.retentionSize }}
   retentionSize: {{ .Values.prometheus.prometheusSpec.retentionSize | quote }}
 {{- end }}
