--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -166,7 +166,7 @@ server:
   image:
     repository: quay.io/prometheus/prometheus
     # if not set appVersion field from Chart.yaml is used
-    tag: ""
+    tag: 2.52.0 
     # When digest is set to a non-empty value, images will be pulled by digest (regardless of tag value).
     digest: ""
     pullPolicy: IfNotPresent
