--- a/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
@@ -19,6 +19,10 @@ spec:
     {{- with .Values.serviceMonitor.selfMonitor.port }}
     port: {{ . }}
     {{- end }}
+    {{- if .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels }}
+    metricRelabelings:
+      {{- toYaml .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels | nindent 6 }}
+    {{- end }}  
     {{- if .Values.serviceMonitor.selfMonitor.tlsConfig }}
     tlsConfig:
       {{- toYaml .Values.serviceMonitor.selfMonitor.tlsConfig | nindent 6 }}
