[prometheus-sql-exporter] Update CODEOWNERS
Signed-off-by: Wilfried Roset <wilfriedroset@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -47,6 +47,7 @@
 /charts/prometheus-redis-exporter/ @acondrat @zanhsieh
 /charts/prometheus-smartctl-exporter/ @kfox1111 @zeritti
 /charts/prometheus-snmp-exporter/ @miouge1 @walker-tom @xiu
+/charts/prometheus-sql-exporter/ @wilfriedroset
 /charts/prometheus-stackdriver-exporter/ @apenney @rpahli
 /charts/prometheus-statsd-exporter/ @scDisorder
 /charts/prometheus-systemd-exporter/ @capuche2412 @maxime1907
