add the possibility to specify objectSelector for admissionWebhooks objects
Signed-off-by: Alexis Sellier <3765063+alexissellier@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2228,6 +2228,8 @@ prometheusOperator:
     #   argocd.argoproj.io/hook-delete-policy: HookSucceeded
 
     namespaceSelector: {}
+    objectSelector: {}
+
 
     deployment:
       enabled: false
