[kube-prometheus-stack] add automountServiceAccountToken into prometheus-operator/admission-webhooks/job-patch/serviceaccount (#4553)
Signed-off-by: Reddysekhar Gaduputi <gsekhar73@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2485,6 +2485,7 @@ prometheusOperator:
       ##
       serviceAccount:
         create: true
+        automountServiceAccountToken: true
 
     # Security context for create job container
     createSecretJob:
