--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2884,6 +2884,15 @@ prometheusOperator:
   ##
   automountServiceAccountToken: true
 
+  ## Statefulset's persistent volume claim retention policy
+  ## pvcDeleteOnStsDelete and pvcDeleteOnStsScale determine whether
+  ## statefulset's PVCs are deleted (true) or retained (false) on scaling down
+  ## and deleting statefulset, respectively. Requires 1.27.0+.
+  ## Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#persistentvolumeclaim-retention
+  statefulSet:
+    pvcDeleteOnStsDelete: false
+    pvcDeleteOnStsScale: false
+
   ## Additional volumes
   ##
   extraVolumes: []
