add empty value as default to values.yaml
Signed-off-by: Wojciech Suszko <wsuszko14@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3370,7 +3370,7 @@ prometheus:
     ## statefulset's PVCs are deleted (true) or retained (false) on scaling down
     ## and deleting statefulset, respectively. Requires 1.27.0+.
     ## Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#persistentvolumeclaim-retention
-    persistentVolumeClaimRetentionPolicy: 
+    persistentVolumeClaimRetentionPolicy: {}
     #  whenDeleted: Retain
     #  whenScaled: Retain
     
