--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -323,6 +323,9 @@ server:
   ## Extra labels for Prometheus server ConfigMap (ConfigMap that holds serverFiles)
   extraConfigmapLabels: {}
 
+  ## Override the prometheus.server.fullname for all objects related to the Prometheus server
+  fullnameOverride: ""
+
   ingress:
     ## If true, Prometheus server Ingress will be created
     ##
