--- a/charts/prometheus-statsd-exporter/values.yaml
+++ b/charts/prometheus-statsd-exporter/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+kind: Deployment
+
 replicaCount: 1
 # deploymentRevisionHistoryLimit: 10
 
@@ -120,6 +122,8 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+priorityClassName: ''
+
 service:
   type: ClusterIP
   # The address on which to expose the web interface and generated Prometheus metrics.
@@ -167,6 +171,10 @@ autoscaling:
 # Ref. https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
 lifecycle: {}
 
+hostNetwork: false
+
+hostPID: false
+
 nodeSelector: {}
 
 tolerations: []
@@ -174,3 +182,7 @@ tolerations: []
 affinity: {}
 
 topologySpreadConstraints: []
+
+strategy: {}
+
+updateStrategy: {}
