add missing host network and host pod
Signed-off-by: Lukas Monkevicius <64898324+lukas-unity@users.noreply.github.com>
Signed-off-by: Lukas Monkevicius <lukas.monkevicius@unity3d.com>

--- a/charts/prometheus-statsd-exporter/templates/deployment.yaml
+++ b/charts/prometheus-statsd-exporter/templates/deployment.yaml
@@ -108,6 +108,8 @@ spec:
                 path: statsd-mapping.conf
       {{- end }}
       {{- with .Values.nodeSelector }}
+      hostNetwork: {{ .Values.hostNetwork }}
+      hostPID: {{ .Values.hostPID }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
