--- a/charts/prometheus-statsd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-statsd-exporter/templates/daemonset.yaml
@@ -107,6 +107,7 @@ spec:
                 path: statsd-mapping.conf
       {{- end }}
       {{- with .Values.nodeSelector }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
       hostNetwork: {{ .Values.hostNetwork }}
       hostPID: {{ .Values.hostPID }}
       nodeSelector:
