--- a/charts/prometheus-statsd-exporter/values.yaml
+++ b/charts/prometheus-statsd-exporter/values.yaml
@@ -171,6 +171,8 @@ autoscaling:
 # Ref. https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
 lifecycle: {}
 
+dnsPolicy: ClusterFirst
+
 hostNetwork: false
 
 hostPID: false
