make strategy conditional
Signed-off-by: Lukas Monkevicius <lukas.monkevicius@unity3d.com>

--- a/charts/prometheus-statsd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-statsd-exporter/templates/daemonset.yaml
@@ -125,6 +125,8 @@ spec:
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.updateStrategy }}
       updateStrategy:
         {{- toYaml . | nindent 4 }}
+      {{- end }}
 {{- end }}
