--- a/charts/prometheus-statsd-exporter/templates/deployment.yaml
+++ b/charts/prometheus-statsd-exporter/templates/deployment.yaml
@@ -126,6 +126,8 @@ spec:
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.strategy }}
       strategy:
         {{- toYaml . | nindent 4 }}
+      {{- end }}
 {{- end }}
