[prometheus-json-exporter] Add default action to ServiceMonitor
Signed-off-by: yahel2410 <yahel2410@gmail.com>

--- a/charts/prometheus-json-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-json-exporter/templates/servicemonitor.yaml
@@ -31,12 +31,15 @@ spec:
       - sourceLabels: [instance]
         targetLabel: instance
         replacement: {{ .url }}
+        action: replace
       - sourceLabels: [target]
         targetLabel: target
         replacement: {{ .name }}
+        action: replace
         {{- range $targetLabel, $replacement := .additionalMetricsRelabels | default $.Values.serviceMonitor.defaults.additionalMetricsRelabels }}
       - targetLabel: {{ $targetLabel }}
         replacement: {{ $replacement }}
+        action: replace
         {{- end }}
   jobLabel: "{{ $.Release.Name }}"
   selector:
