--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -2,6 +2,23 @@
 ## This allows to set the same values for the imagePullSecrets, obviating the need
 ## to set the same values for each chart (and image) separately
 global:
+## Allow either an array of {name: pullSecret} maps (k8s-style), or an array of strings (more common helm-style).
+##  imagePullSecrets:
+##  - name: pullSecret1
+##  - name: pullSecret2
+##
+## or
+##
+##  imagePullSecrets:
+##  - pullSecret1
+##  - pullSecret2
+##
+## or a templated value
+##
+##    imagePullSecrets:
+##    - "{{ .Values.templateValue }}"
+##  templateValue: test
+
   imagePullSecrets: []
   imageRegistry: ""
 
