--- a/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/alertmanager.yaml
@@ -47,11 +47,9 @@ spec:
   logFormat: {{ .Values.alertmanager.alertmanagerSpec.logFormat | quote  }}
   logLevel:  {{ .Values.alertmanager.alertmanagerSpec.logLevel | quote  }}
   retention: {{ .Values.alertmanager.alertmanagerSpec.retention | quote  }}
-  {{- if .Values.alertmanager.enableFeatures }}
+  {{- with .Values.alertmanager.enableFeatures }}
   enableFeatures:
-    {{- range .Values.alertmanager.enableFeatures }}
-    - {{ . | quote }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- if .Values.alertmanager.alertmanagerSpec.secrets }}
   secrets:
