Add the option to set priorityClassName for helm chart prometheus-snmp-exporter
Signed-off-by: Richard Arends <github@mosibi.nl>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -13,6 +13,9 @@ nodeSelector: {}
 tolerations: []
 affinity: {}
 
+## Assign a PriorityClassName to pods if set
+# priorityClassName: ""
+
 ## Provide a namespace to substitude for the namespace on resources
 namespaceOverride: ""
 
