Change targetPort property to port property when configuring service monitor
Signed-off-by: Ruslan Savchuk <savchuk.rus@gmail.com>

--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -13,7 +13,7 @@ metadata:
 {{- end }}
 spec:
   endpoints:
-  - targetPort: {{ .Values.service.name }}
+  - port: {{ .Values.service.name }}
 {{- if .Values.serviceMonitor.interval }}
     interval: {{ .Values.serviceMonitor.interval }}
 {{- end }}
