--- a/charts/prom-label-proxy/templates/service.yaml
+++ b/charts/prom-label-proxy/templates/service.yaml
@@ -13,7 +13,11 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
+      {{-  if .Values.kubeRBACProxy.enabled  }}
+      targetPort: krp
+      {{- else }}
       targetPort: http
+      {{- end }}
       protocol: TCP
       name: http
       {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePort))) }}
