fix(prometheus-blackbox-exporter)!: set api version to policy/v1 on pod disruption budget
Signed-off-by: Damien Plénard <damien@plenard.me>

--- a/charts/prometheus-blackbox-exporter/templates/poddisruptionbudget.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.podDisruptionBudget -}}
-apiVersion: {{ template "prometheus-blackbox-exporter.policy.apiVersion" . }}
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "prometheus-blackbox-exporter.fullname" . }}
