add prometheus annotations to kube-state-metrics and prometheus-node-exporter pods
Signed-off-by: zak905 <zakaria.amine88@gmail.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -1244,6 +1244,9 @@ kube-state-metrics:
   ## If false, kube-state-metrics sub-chart will not be installed
   ##
   enabled: true
+  podAnnotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
 
 ## prometheus-node-exporter sub-chart configurable values
 ## Please see https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-node-exporter
@@ -1252,6 +1255,9 @@ prometheus-node-exporter:
   ## If false, node-exporter will not be installed
   ##
   enabled: true
+  podAnnotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9100"
 
   rbac:
     pspEnabled: false
