Disable the ServiceMonitor by default
We cannot assume that prometheus is installed therefore the user
needs to decide this consciously

Signed-off-by: Bernd May <b.may@syseleven.de>

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -151,7 +151,7 @@ servicePerReplica:
 serviceMonitor:
   ## If true, a ServiceMonitor will be created for the AlertManager service.
   ##
-  enabled: true
+  enabled: false
 
   ## Additional labels
   ##
