[prometheus-json-exporter]: Allow additional container args and service monitor relabelings (#4408)
* [prometheus-json-exporter]: Allow additional container args and service monitor relabelings

Signed-off-by: Faisal K <khalique.faisal@gmail.com>

* Updates and incorporating review comments

Signed-off-by: Faisal K <khalique.faisal@gmail.com>

---------

Signed-off-by: Faisal K <khalique.faisal@gmail.com>
Signed-off-by: MH <zanhsieh@gmail.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-json-exporter/templates/deployment.yaml
+++ b/charts/prometheus-json-exporter/templates/deployment.yaml
@@ -38,10 +38,17 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- with .Values.extraInitContainers }}
       initContainers:
-        {{ toYaml . | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
+          {{- with .Values.extraArgs }}
+          args:
+          {{- range . }}
+          - {{ .name | quote }}
+          - {{ .value | quote }}
+          {{- end }}
+          {{- end }}
           {{- with .Values.environmentVariables }}
           env:
             {{- toYaml . | nindent 12}}
