--- a/charts/prometheus-json-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-json-exporter/templates/servicemonitor.yaml
@@ -41,6 +41,10 @@ spec:
         replacement: {{ $replacement }}
         action: replace
         {{- end }}
+    {{- with .additionalRelabels | default $.Values.serviceMonitor.defaults.additionalRelabels }}
+    relabelings:
+    {{- toYaml . | nindent 6 }}
+    {{- end }}
   jobLabel: "{{ $.Release.Name }}"
   selector:
     matchLabels:
