Add crd dependencies
Signed-off-by: Bernd May <b.may@syseleven.de>

--- a/charts/alertmanager/Chart.yaml
+++ b/charts/alertmanager/Chart.yaml
@@ -5,6 +5,11 @@ home: https://prometheus.io/
 icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
 sources:
   - https://github.com/prometheus/alertmanager
+dependencies:
+  - name: prometheus-operator-crds
+    version: ">=0.1.0"
+    condition: crds.enabled
+    repository: "https://prometheus-community.github.io/helm-charts"
 type: application
 version: 1.12.0
 appVersion: v0.27.0
