--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -3,6 +3,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+crds:
+  enabled: false
+
 replicaCount: 1
 
 # Number of old history to retain to allow rollback
